2009-07-22   Jan Nijtmans <nijtmans@users.sourceforge.net>
	
	* generic/tclThread.h:   Remove unnecessary ';'s
	* generic/tclXkeylist.c: Constify remaining of thread extension,
	* generic/tclXkeylist.h: bringing it at the same level as Tcl 8.6
	* generic/threadCmd.c
	* generic/threadPoolCmd.c
	* generic/threadSpCmd.c
	* generic/threadSvCmd.c
	* generic/threadSvCmd.h
	* generic/threadSvKeylistCmd.c
	* generic/threadSvKeylistCmd.h
	* generic/threadSvListCmd.c
	
2009-07-16   Alexandre Ferrieux <ferrieux@sourceforge.net>
	
	* generic/tclXkeylist.c: Constify Tcl_ObjGetType return values to
	* generic/threadSvCmd.c: get rid of const warnings; #if 0 of
	* generic/threadSvCmd.h: SvFinalize which is unused.
	
2009-05-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/vc/makefile.vc: Updated the MSVC build to work with MSCV 8
	* win/vc/rules.vc:    and 9 on both intel and amd64 targets.
	* win/vc/nmakehlp.c:

2009-05-03  Alexandre Ferrieux <ferrieux@sourceforge.net>
	* generic/threadSpCmd.c: Reorder things in RemoveMutex and
	RemoveCondv [Bugs 2511424,2511408]; fix a Put* leak in an error
	path of rwmutexes [Bug 2511420].

2008-12-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/threadSvCmd.c: Handle TIP#336 addition of API to access
	* generic/threadSpCmd.c: interp->errorLine

2008-11-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/threadSvCmd.c (SvObjObjCmd): safely set interp result obj

	* generic/threadCmd.c (ThreadCutChannel): fix const warning
	(ThreadSend): safely set interp result object [Bug #1988779]

2009-10-22 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadPool.c: fixed race condition when
	creating minworkers worker thread upfront.
	Failure to create one results in partial pool teardown.
	Fix for Bug # 2005794.

2008-05-22 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadSpCmd.h: Added one cond variable per
	sync bucket to wait for item deletion.

	* generic/threadSpCmd.c: Threads that want to delete